Fixed alignment on aggregate data.

--- a/django/publicmapping/site-media/css/publicmapping.css
+++ b/django/publicmapping/site-media/css/publicmapping.css
@@ -789,11 +789,17 @@ div.plansummary h3 {
 
 }
 div.plansummary label {
+  display:inline-block;
+  width: 60px;
+  text-align:left;
   font-size: 12px;
   font-weight: bold;
 
   }
 div.plansummary  .value {
+  display:inline-block;
+  width: 60px;
+  text-align:right;
   font-size: 12px;
   font-weight: normal
   }
